--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Mohtigame</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <meta property="og:title" content="Mohtigame" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mothigame.dthomas.fr/" />
+  <meta property="og:image" content="https://mothigame.dthomas.fr/img/mohtigame.jpg" />
+  <meta property="og:description" content="Une variante du jeu des 5000. De deux à dix joueurs, vous devez enchaîner les combinaisons à l'aide de dés pour être le premier à atteindre le score max" />
+  <title>Mohtigame - Jeu de dés en ligne</title>
+  <meta name="description" content="Une variante du jeu des 5000. De deux à dix joueurs, vous devez enchaîner les combinaisons à l'aide de dés pour être le premier à atteindre le score max">
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
